--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,28 @@
-fastapi
-uvicorn[standard]
-boto3
-python-multipart
-unotools
+annotated-types==0.7.0
+anyio==4.10.0
+boto3==1.40.33
+botocore==1.40.33
+click==8.2.1
+fastapi==0.116.2
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+jmespath==1.0.1
+pydantic==2.11.9
+pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+s3transfer==0.14.0
+six==1.17.0
+sniffio==1.3.1
+starlette==0.48.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+unoserver==3.3.2
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
